[gd_scene load_steps=78 format=3 uid="uid://vd6f817st20r"]

[ext_resource type="Script" uid="uid://dyfhfmncwhby0" path="res://scripts/main.gd" id="1_tbgi4"]
[ext_resource type="Texture2D" uid="uid://dvs41irukbpji" path="res://assets/interiors/背景1.png" id="2_muem4"]
[ext_resource type="PackedScene" uid="uid://dob8a2h4f6gt8" path="res://scenes/player.tscn" id="2_sugp2"]
[ext_resource type="Texture2D" uid="uid://bvhml2gnweolu" path="res://assets/interiors/好未来.png" id="3_a8y0u"]
[ext_resource type="PackedScene" uid="uid://dxcvuxgvdsx7" path="res://scenes/npc.tscn" id="3_jyhfs"]
[ext_resource type="Texture2D" uid="uid://dcljwh6jlvwaq" path="res://assets/characters/character_3.png" id="5_o6xl0"]
[ext_resource type="Texture2D" uid="uid://c6guopaun4bag" path="res://assets/interiors/Japanese_Home_1_preview_48x48.png" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://cm0yi2d074t64" path="res://scenes/dialogue_ui.tscn" id="5_tefeu"]
[ext_resource type="Texture2D" uid="uid://de7ldlal03lu1" path="res://assets/interiors/7-2011101536234C.jpg" id="5_trceg"]
[ext_resource type="PackedScene" path="res://scenes/quiz_ui.tscn" id="6_quiz_ui"]
[ext_resource type="Texture2D" uid="uid://ctck55y8mb2ti" path="res://assets/interiors/中年.png" id="8_muem4"]
[ext_resource type="Texture2D" uid="uid://be80ipi13u6xb" path="res://assets/interiors/小鲸鱼.png" id="8_tipki"]
[ext_resource type="AudioStream" uid="uid://brhbet2ll8icy" path="res://assets/audio/BGM.ogg" id="9_85g3d"]
[ext_resource type="Texture2D" uid="uid://bsggyc48ohxna" path="res://assets/interiors/老年.png" id="9_dp3eg"]
[ext_resource type="Texture2D" uid="uid://btsp25vllik6l" path="res://assets/characters/中年李白_2_-removebg-preview.png" id="12_jbj1t"]
[ext_resource type="Texture2D" uid="uid://bjuoh0xnb6ifr" path="res://assets/characters/老年李白-removebg-preview.png" id="12_muem4"]
[ext_resource type="Texture2D" uid="uid://blxlk1xeys5xt" path="res://assets/characters/青年李白-removebg-preview.png" id="13_jbj1t"]
[ext_resource type="Texture2D" uid="uid://c126qchhjt126" path="res://assets/interiors/城镇.png" id="15_jkv2x"]
[ext_resource type="PackedScene" path="res://scenes/quiz_trigger.tscn" id="18_dp3eg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yq6so"]
atlas = ExtResource("12_muem4")
region = Rect2(0, 0, 115, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv21b"]
atlas = ExtResource("12_muem4")
region = Rect2(115, 0, 115, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_tel4y"]
atlas = ExtResource("12_muem4")
region = Rect2(230, 0, 115, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkpxi"]
atlas = ExtResource("12_muem4")
region = Rect2(345, 0, 115, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q0nq"]
atlas = ExtResource("12_muem4")
region = Rect2(460, 0, 115, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgi5k"]
atlas = ExtResource("12_muem4")
region = Rect2(575, 0, 115, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_jbj1t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq6so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv21b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tel4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkpxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q0nq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgi5k")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3eg"]
atlas = ExtResource("13_jbj1t")
region = Rect2(0, 0, 115, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ld40"]
atlas = ExtResource("13_jbj1t")
region = Rect2(115, 0, 115, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqmmt"]
atlas = ExtResource("13_jbj1t")
region = Rect2(230, 0, 115, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc10j"]
atlas = ExtResource("13_jbj1t")
region = Rect2(345, 0, 115, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_jscy8"]
atlas = ExtResource("13_jbj1t")
region = Rect2(460, 0, 115, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm3ni"]
atlas = ExtResource("13_jbj1t")
region = Rect2(575, 0, 115, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjqg0"]
atlas = ExtResource("5_o6xl0")
region = Rect2(288, 792, 48, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_vchkt"]
atlas = ExtResource("5_o6xl0")
region = Rect2(336, 792, 48, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_txyw0"]
atlas = ExtResource("5_o6xl0")
region = Rect2(384, 792, 48, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc5cj"]
atlas = ExtResource("5_o6xl0")
region = Rect2(432, 792, 48, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvyfr"]
atlas = ExtResource("5_o6xl0")
region = Rect2(480, 792, 48, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty1g6"]
atlas = ExtResource("5_o6xl0")
region = Rect2(528, 792, 48, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_tbgi4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ld40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqmmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc10j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jscy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm3ni")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjqg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vchkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txyw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc5cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvyfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty1g6")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_muem4"]
atlas = ExtResource("12_jbj1t")
region = Rect2(0, 0, 112, 369)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6deb"]
atlas = ExtResource("12_jbj1t")
region = Rect2(112, 0, 112, 369)

[sub_resource type="AtlasTexture" id="AtlasTexture_og1vs"]
atlas = ExtResource("12_jbj1t")
region = Rect2(224, 0, 112, 369)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wyq8"]
atlas = ExtResource("12_jbj1t")
region = Rect2(336, 0, 112, 369)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxglm"]
atlas = ExtResource("12_jbj1t")
region = Rect2(448, 0, 112, 369)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f3dj"]
atlas = ExtResource("12_jbj1t")
region = Rect2(560, 0, 112, 369)

[sub_resource type="SpriteFrames" id="SpriteFrames_0ld40"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_muem4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6deb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og1vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wyq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxglm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f3dj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tipki"]
size = Vector2(830.75, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85g3d"]
size = Vector2(104.86206, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_choun"]
size = Vector2(679.9285, 117)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya4ey"]
size = Vector2(455.5699, 84.19971)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eb6dy"]
size = Vector2(64, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trceg"]
size = Vector2(573.6492, 105.23761)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8y0u"]
size = Vector2(100.55446, 311.14258)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkv2x"]
size = Vector2(109.5, 67)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbj1t"]
size = Vector2(372.5, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muem4"]
size = Vector2(873.0325, 110.729004)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dp3eg"]
size = Vector2(407.73816, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ld40"]
size = Vector2(635.6011, 85.54968)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_gqmmt"]
b = Vector2(278, -1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqmmt"]
size = Vector2(493.45044, 110.03961)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fuf3a"]
size = Vector2(82.85248, 268.986)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yc10j"]
size = Vector2(798.375, 82.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jscy8"]
size = Vector2(679.431, 122.499756)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pm3ni"]
size = Vector2(1154, 690)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y6deb"]
size = Vector2(441.85287, 195.00012)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_og1vs"]
size = Vector2(1215.7253, 139.62866)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wyq8"]
size = Vector2(596.0273, 236.41315)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxglm"]
size = Vector2(1474.4814, 112.79697)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2f3dj"]
size = Vector2(1987, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yq6so"]
size = Vector2(6071.49, 110.729004)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fv21b"]
size = Vector2(5984.5, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tel4y"]
size = Vector2(120.105255, 1863.5713)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qkpxi"]
size = Vector2(120.105255, 1821.5713)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5q0nq"]
size = Vector2(90.52631, 814.3928)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgi5k"]
size = Vector2(94.99995, 837.78564)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8jky"]
size = Vector2(102.05263, 792.78564)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmb1v"]
size = Vector2(108.05263, 847.78564)

[node name="Main" type="Node2D"]
script = ExtResource("1_tbgi4")

[node name="Background2" type="Sprite2D" parent="."]
position = Vector2(4021, 1039)
scale = Vector2(4, 2.388)
texture = ExtResource("2_muem4")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(61.000122, 356.99997)
scale = Vector2(1.4747808, 1.1394081)
texture = ExtResource("5_tbgi4")

[node name="72011101536234c" type="Sprite2D" parent="Background"]
position = Vector2(860.87964, 739.3232)
rotation = -0.32463124
scale = Vector2(0.05800088, 0.059121568)
skew = 0.30019662
texture = ExtResource("5_trceg")
region_enabled = true
region_rect = Rect2(0, 0, 1050, 758)

[node name="小鲸鱼" type="Sprite2D" parent="Background"]
position = Vector2(144.08925, -429.38962)
scale = Vector2(0.09239753, 0.12666555)
texture = ExtResource("8_tipki")

[node name="Background3" type="Sprite2D" parent="."]
position = Vector2(4512, 2869)
scale = Vector2(2.1749785, 1.2982508)
texture = ExtResource("15_jkv2x")

[node name="Background4" type="Sprite2D" parent="."]
position = Vector2(4487.0005, 2900)
scale = Vector2(2.1749785, 1.2982508)
texture = ExtResource("8_muem4")

[node name="Background5" type="Sprite2D" parent="."]
position = Vector2(4176, 3026)
scale = Vector2(2.1749785, 1.2982508)
texture = ExtResource("9_dp3eg")

[node name="72011101536234c" type="Sprite2D" parent="."]
position = Vector2(4629, 2058)
scale = Vector2(3, 2.328)
texture = ExtResource("3_a8y0u")
region_enabled = true
region_rect = Rect2(0, 0, 1050, 758)

[node name="QuizUI" parent="." instance=ExtResource("6_quiz_ui")]

[node name="Player" parent="." instance=ExtResource("2_sugp2")]
position = Vector2(1738, 1541)

[node name="NPCs" type="Node2D" parent="."]

[node name="NPC_Zhang" parent="NPCs" instance=ExtResource("3_jyhfs")]
position = Vector2(2602, 1489)
npc_title = ""
sprite_frames = SubResource("SpriteFrames_jbj1t")
wander_enabled = false
wander_range = 0.0

[node name="NPC_Li" parent="NPCs" instance=ExtResource("3_jyhfs")]
position = Vector2(1863.9999, 1094)
scale = Vector2(1.079, 1)
up_direction = Vector2(0.9998615, -0.016647693)
npc_name = "青年李白"
npc_title = ""
sprite_frames = SubResource("SpriteFrames_tbgi4")
move_speed = 10.0
wander_enabled = false
wander_range = 1.0
wander_interval_min = 2.0
wander_interval_max = 5.0

[node name="NPC_Wang" parent="NPCs" instance=ExtResource("3_jyhfs")]
z_index = 1
position = Vector2(2773, 1157)
npc_name = "中年李白"
npc_title = ""
sprite_frames = SubResource("SpriteFrames_0ld40")
wander_enabled = false
wander_range = 5.0

[node name="DialogueUI" parent="." instance=ExtResource("5_tefeu")]

[node name="Walls" type="Node2D" parent="."]
position = Vector2(-992, -5)

[node name="TopWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2(396, 86)
shape = SubResource("RectangleShape2D_tipki")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2(1034, 86)
shape = SubResource("RectangleShape2D_85g3d")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2(787, 113)
shape = SubResource("RectangleShape2D_choun")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2(747, 112)
shape = SubResource("RectangleShape2D_ya4ey")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2(827, 113)
shape = SubResource("RectangleShape2D_ya4ey")

[node name="BottomWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2(641, 567)
shape = SubResource("RectangleShape2D_eb6dy")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2(26.75, 328)
shape = SubResource("RectangleShape2D_trceg")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2(1263, 332)
shape = SubResource("RectangleShape2D_trceg")
disabled = true

[node name="MiddleWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MiddleWall"]
position = Vector2(428.5, 268.5)
shape = SubResource("RectangleShape2D_a8y0u")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/MiddleWall"]
position = Vector2(907, 368.5)
shape = SubResource("RectangleShape2D_jkv2x")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls/MiddleWall"]
position = Vector2(1197.5, 369.5)
shape = SubResource("RectangleShape2D_jbj1t")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_85g3d")
volume_db = -6.679
autoplay = true

[node name="Walls2" type="Node2D" parent="."]
position = Vector2(1191, 2199)

[node name="TopWall" type="StaticBody2D" parent="Walls2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls2/TopWall"]
position = Vector2(1181.625, -1226)
shape = SubResource("RectangleShape2D_tipki")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls2/TopWall"]
position = Vector2(547, -523)
rotation = -1.012291
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_85g3d")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls2/TopWall"]
position = Vector2(238, -407)
rotation = -0.424115
shape = SubResource("RectangleShape2D_choun")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls2/TopWall"]
position = Vector2(982.06885, -673.32764)
rotation = -0.27401668
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_ya4ey")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Walls2/TopWall"]
position = Vector2(1419, -579)
rotation = -0.35953784
shape = SubResource("RectangleShape2D_muem4")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Walls2/TopWall"]
position = Vector2(562.3087, -1171.5852)
rotation = -0.29321527
shape = SubResource("RectangleShape2D_dp3eg")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Walls2/TopWall"]
position = Vector2(140, -1018)
rotation = -0.27925268
shape = SubResource("RectangleShape2D_0ld40")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Walls2/TopWall"]
position = Vector2(1432, -594)
shape = SubResource("SegmentShape2D_gqmmt")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Walls2/TopWall"]
position = Vector2(547, -986)
rotation = 0.2932153
shape = SubResource("RectangleShape2D_gqmmt")

[node name="BottomWall" type="StaticBody2D" parent="Walls2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls2/BottomWall"]
position = Vector2(1008, -338)
shape = SubResource("RectangleShape2D_eb6dy")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls2/BottomWall"]
position = Vector2(632.1616, -321.729)
rotation = 1.2182398
shape = SubResource("RectangleShape2D_fuf3a")
debug_color = Color(0.7156372, 0.4263275, 0.60480946, 0.41960785)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls2/BottomWall"]
position = Vector2(1012, -905)
shape = SubResource("RectangleShape2D_trceg")
disabled = true

[node name="MiddleWall" type="StaticBody2D" parent="Walls2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls2/MiddleWall"]
position = Vector2(1010.6345, -975.60706)
rotation = -1.0768682
shape = SubResource("RectangleShape2D_a8y0u")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls2/MiddleWall"]
position = Vector2(874.25, -1075)
shape = SubResource("RectangleShape2D_jkv2x")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls2/MiddleWall"]
position = Vector2(1704, -1284)
shape = SubResource("RectangleShape2D_jbj1t")

[node name="Walls2" type="Node2D" parent="Walls2"]
position = Vector2(-241, 1449)

[node name="TopWall" type="StaticBody2D" parent="Walls2/Walls2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls2/Walls2/TopWall"]
position = Vector2(2562.8125, -2893.25)
shape = SubResource("RectangleShape2D_yc10j")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls2/Walls2/TopWall"]
position = Vector2(3624.2847, -2903.25)
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_jscy8")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls2/Walls2/TopWall"]
position = Vector2(2744, -2109)
shape = SubResource("RectangleShape2D_pm3ni")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls2/Walls2/TopWall"]
position = Vector2(3722, -3063)
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_y6deb")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Walls2/Walls2/TopWall"]
position = Vector2(5442.8853, -2720.1553)
rotation = -0.22863813
scale = Vector2(0.9999998, 0.9999998)
shape = SubResource("RectangleShape2D_og1vs")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Walls2/Walls2/TopWall"]
position = Vector2(4309, -2368)
rotation = -0.29321527
shape = SubResource("RectangleShape2D_2wyq8")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Walls2/Walls2/TopWall"]
position = Vector2(5043, -1973.9998)
rotation = 0.35953784
shape = SubResource("RectangleShape2D_vxglm")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Walls2/Walls2/TopWall"]
position = Vector2(5046, -3243)
shape = SubResource("RectangleShape2D_2f3dj")
disabled = true
debug_color = Color(0.09322188, 0.5974973, 0.6983579, 0.41960785)

[node name="zhengti" type="Node2D" parent="."]
position = Vector2(701, 2381)

[node name="TopWall" type="StaticBody2D" parent="zhengti"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="zhengti/TopWall"]
position = Vector2(3332, -2265)
shape = SubResource("RectangleShape2D_yq6so")

[node name="BottomWall" type="StaticBody2D" parent="zhengti"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="zhengti/BottomWall"]
position = Vector2(3358, -447)
shape = SubResource("RectangleShape2D_fv21b")

[node name="LeftWall" type="StaticBody2D" parent="zhengti"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="zhengti/LeftWall"]
position = Vector2(309, -1348.2144)
shape = SubResource("RectangleShape2D_tel4y")

[node name="RightWall" type="StaticBody2D" parent="zhengti"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="zhengti/RightWall"]
position = Vector2(6329, -1362.2144)
shape = SubResource("RectangleShape2D_qkpxi")

[node name="MiddleWall" type="StaticBody2D" parent="zhengti"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="zhengti/MiddleWall"]
position = Vector2(2390, -1828)
shape = SubResource("RectangleShape2D_5q0nq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="zhengti/MiddleWall"]
position = Vector2(2388.5, -870.1072)
shape = SubResource("RectangleShape2D_dgi5k")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="zhengti/MiddleWall"]
position = Vector2(4257.0264, -1817.3928)
shape = SubResource("RectangleShape2D_j8jky")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="zhengti/MiddleWall"]
position = Vector2(4257, -879)
shape = SubResource("RectangleShape2D_kmb1v")

[node name="QuizTrigger" parent="." instance=ExtResource("18_dp3eg")]
position = Vector2(1869, 1614)
scale = Vector2(0.5, 0.5)
