# ä¸»åœºæ™¯è„šæœ¬
extends Node2D

# NPCèŠ‚ç‚¹å¼•ç”¨
@onready var npc_zhang: Node2D = $NPCs/NPC_Zhang
@onready var npc_li: Node2D = $NPCs/NPC_Li
@onready var npc_wang: Node2D = $NPCs/NPC_Wang

# APIå®¢æˆ·ç«¯
var api_client: Node = null

# NPCçŠ¶æ€æ›´æ–°è®¡æ—¶å™¨
var status_update_timer: float = 0.0

# æš‚åœèœå•
var pause_menu: Node = null

func _ready():
	# æ·»åŠ åˆ°mainç»„ï¼Œæ–¹ä¾¿å…¶ä»–èŠ‚ç‚¹æŸ¥æ‰¾
	add_to_group("main")
	
	print("[INFO] ä¸»åœºæ™¯åˆå§‹åŒ–")
	
	# è·å–APIå®¢æˆ·ç«¯
	api_client = get_node_or_null("/root/APIClient")
	if api_client:
		api_client.npc_status_received.connect(_on_npc_status_received)
		
		# ç«‹å³è·å–ä¸€æ¬¡NPCçŠ¶æ€
		api_client.get_npc_status()
	else:
		print("[ERROR] APIå®¢æˆ·ç«¯æœªæ‰¾åˆ°")
	
	# â­ åˆ›å»ºå¤–éƒ¨ç¨‹åºç®¡ç†å™¨
	var external_app_manager = preload("res://scripts/external_app_manager.gd").new()
	external_app_manager.name = "ExternalAppManager"
	external_app_manager.add_to_group("external_app_manager")
	get_tree().root.add_child(external_app_manager)
	print("[INFO] å¤–éƒ¨ç¨‹åºç®¡ç†å™¨å·²æ·»åŠ åˆ°åœºæ™¯æ ‘")
	
	# â­ è¿æ¥åŒºåŸŸè§£é”ä¿¡å·
	if RegionManager:
		RegionManager.region_unlocked.connect(_on_region_unlocked)
		print("[INFO] åŒºåŸŸè§£é”ä¿¡å·å·²è¿æ¥")
	
	# â­ éªŒè¯QuizUIæ˜¯å¦å­˜åœ¨
	var quiz_ui = get_node_or_null("QuizUI")
	if quiz_ui:
		print("[INFO] âœ… QuizUIèŠ‚ç‚¹å·²æ‰¾åˆ°: ", quiz_ui.name)
		if quiz_ui.is_in_group("quiz_ui"):
			print("[INFO] âœ… QuizUIå·²æ·»åŠ åˆ°quiz_uiç»„")
		else:
			print("[WARN] âš ï¸ QuizUIæœªæ·»åŠ åˆ°quiz_uiç»„")
	else:
		print("[ERROR] âŒ æœªæ‰¾åˆ°QuizUIèŠ‚ç‚¹")
	
	# â­ åˆ›å»ºæš‚åœèœå•
	_create_pause_menu()

func _on_region_unlocked(region_id: int):
	"""åŒºåŸŸè§£é”æ—¶çš„å›è°ƒ"""
	print("[INFO] ğŸ‰ åŒºåŸŸ %d å·²è§£é”ï¼" % region_id)
	# å¯ä»¥åœ¨è¿™é‡Œæ’­æ”¾è§£é”åŠ¨ç”»æˆ–éŸ³æ•ˆ

func _process(delta: float):
	# å®šæ—¶æ›´æ–°NPCçŠ¶æ€
	status_update_timer += delta
	if status_update_timer >= Config.NPC_STATUS_UPDATE_INTERVAL:
		status_update_timer = 0.0
		if api_client:
			api_client.get_npc_status()

func _on_npc_status_received(dialogues: Dictionary):
	"""æ”¶åˆ°NPCçŠ¶æ€æ›´æ–°"""
	print("[INFO] æ›´æ–°NPCçŠ¶æ€: ", dialogues)
	
	# æ›´æ–°å„ä¸ªNPCçš„å¯¹è¯
	for npc_name in dialogues:
		var dialogue = dialogues[npc_name]
		update_npc_dialogue(npc_name, dialogue)

func update_npc_dialogue(npc_name: String, dialogue: String):
	"""æ›´æ–°æŒ‡å®šNPCçš„å¯¹è¯"""
	var npc_node = get_npc_node(npc_name)
	if npc_node and npc_node.has_method("update_dialogue"):
		npc_node.update_dialogue(dialogue)

func get_npc_node(npc_name: String) -> Node2D:
	"""æ ¹æ®åå­—è·å–NPCèŠ‚ç‚¹"""
	match npc_name:
		"è€å¹´æç™½":
			return npc_zhang
		"é’å¹´æç™½":
			return npc_li
		"ä¸­å¹´æç™½":
			return npc_wang
		_:
			return null

func _create_pause_menu():
	"""åˆ›å»ºæš‚åœèœå•UI"""
	# åŠ è½½æš‚åœèœå•è„šæœ¬
	var pause_menu_script = load("res://scripts/pause_menu.gd")
	if not pause_menu_script:
		print("[ERROR] æ— æ³•åŠ è½½æš‚åœèœå•è„šæœ¬")
		return
	
	# åˆ›å»ºCanvasLayerèŠ‚ç‚¹
	pause_menu = pause_menu_script.new()
	pause_menu.name = "PauseMenu"
	
	# åˆ›å»ºUIèŠ‚ç‚¹ç»“æ„ï¼ˆå¢å¤§å°ºå¯¸ï¼‰
	var panel = Panel.new()
	panel.name = "Panel"
	panel.anchors_preset = Control.PRESET_CENTER
	panel.anchor_left = 0.5
	panel.anchor_top = 0.5
	panel.anchor_right = 0.5
	panel.anchor_bottom = 0.5
	panel.offset_left = -650
	panel.offset_top = -550
	panel.offset_right = 650
	panel.offset_bottom = 550
	pause_menu.add_child(panel)
	
	# åˆ›å»ºVBoxContainerï¼ˆç›´æ¥åœ¨é¢æ¿ä¸­å¿ƒï¼‰
	var vbox = VBoxContainer.new()
	vbox.name = "VBoxContainer"
	vbox.anchors_preset = Control.PRESET_CENTER
	vbox.anchor_left = 0.5
	vbox.anchor_top = 0.5
	vbox.anchor_right = 0.5
	vbox.anchor_bottom = 0.5
	vbox.offset_left = -400  # å®½åº¦çš„ä¸€åŠï¼ˆè´Ÿå€¼ï¼‰
	vbox.offset_top = -300   # é«˜åº¦çš„ä¸€åŠï¼ˆè´Ÿå€¼ï¼Œæ ¹æ®å†…å®¹è°ƒæ•´ï¼‰
	vbox.offset_right = 400  # å®½åº¦çš„ä¸€åŠ
	vbox.offset_bottom = 300 # é«˜åº¦çš„ä¸€åŠï¼ˆæ ¹æ®å†…å®¹è°ƒæ•´ï¼‰
	vbox.alignment = BoxContainer.ALIGNMENT_CENTER  # å†…å®¹å±…ä¸­å¯¹é½
	vbox.add_theme_constant_override("separation", 30)  # è®¾ç½®æŒ‰é’®ä¹‹é—´çš„é—´è·
	panel.add_child(vbox)
	
	# åˆ›å»ºæ ‡é¢˜ï¼ˆå¢å¤§å°ºå¯¸ï¼‰
	var title_label = Label.new()
	title_label.name = "TitleLabel"
	title_label.text = "æ¸¸æˆèœå•"
	title_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	title_label.custom_minimum_size = Vector2(0, 120)
	vbox.add_child(title_label)
	
	# æ·»åŠ åˆ†éš”ç¬¦
	var separator1 = HSeparator.new()
	separator1.custom_minimum_size = Vector2(0, 20)
	vbox.add_child(separator1)
	
	# åˆ›å»ºç»§ç»­æŒ‰é’®ï¼ˆå¢å¤§å°ºå¯¸ï¼Œè®¾ç½®å®½åº¦ï¼‰
	var continue_button = Button.new()
	continue_button.name = "ContinueButton"
	continue_button.text = "ç»§ç»­æ¸¸æˆ"
	continue_button.custom_minimum_size = Vector2(600, 100)  # è®¾ç½®å›ºå®šå®½åº¦
	vbox.add_child(continue_button)
	
	# åˆ›å»ºè¿”å›ä¸»èœå•æŒ‰é’®ï¼ˆå¢å¤§å°ºå¯¸ï¼Œè®¾ç½®å®½åº¦ï¼‰
	var main_menu_button = Button.new()
	main_menu_button.name = "MainMenuButton"
	main_menu_button.text = "è¿”å›ä¸»èœå•"
	main_menu_button.custom_minimum_size = Vector2(600, 100)  # è®¾ç½®å›ºå®šå®½åº¦
	vbox.add_child(main_menu_button)
	
	# åˆ›å»ºé€€å‡ºæ¸¸æˆæŒ‰é’®ï¼ˆå¢å¤§å°ºå¯¸ï¼Œè®¾ç½®å®½åº¦ï¼‰
	var exit_button = Button.new()
	exit_button.name = "ExitButton"
	exit_button.text = "é€€å‡ºæ¸¸æˆ"
	exit_button.custom_minimum_size = Vector2(600, 100)  # è®¾ç½®å›ºå®šå®½åº¦
	vbox.add_child(exit_button)
	
	# å°†æš‚åœèœå•æ·»åŠ åˆ°å½“å‰åœºæ™¯ï¼ˆmainèŠ‚ç‚¹ï¼‰
	add_child(pause_menu)
	
	# éªŒè¯æš‚åœèœå•æ˜¯å¦å·²æ­£ç¡®æ·»åŠ 
	if pause_menu and pause_menu.is_inside_tree():
		print("[INFO] âœ… æš‚åœèœå•å·²åˆ›å»ºå¹¶æ·»åŠ åˆ°åœºæ™¯æ ‘")
		print("[DEBUG] æš‚åœèœå•èŠ‚ç‚¹è·¯å¾„: ", pause_menu.get_path())
		print("[DEBUG] æš‚åœèœå•çˆ¶èŠ‚ç‚¹: ", pause_menu.get_parent().name)
	else:
		print("[ERROR] âŒ æš‚åœèœå•æ·»åŠ å¤±è´¥")
